# GTE

./: .gitignore  README.md
GTE/gte/src/app/: app.cpp  app.hpp
GTE/gte/src/app/opengl/: opengl-app.cpp  opengl-app.hpp
GTE/gte/src/core/: engine.cpp  engine.hpp  glm-wrapper.hpp  graphics-wrapper.hpp  internal-ptr.hpp  log.cpp  log.hpp  platform.cpp  platform.hpp  sdl-wrapper.cpp  sdl-wrapper.hpp
GTE/unix/: .gitignore  CMakeLists.txt  setup.sh
GTE/win64/: CMakeLists.txt  cmake-post-build.ps1  setup.ps1
